--- a/src/sdk/CompositeInspector/Views/Templates/modal/publication-record.cshtml
+++ b/src/sdk/CompositeInspector/Views/Templates/modal/publication-record.cshtml
@@ -7,62 +7,45 @@
 <div>
 	<div class="modal-header">
 		<a href="#" class="close" data-dismiss="modal">×</a>
-		<h3>{{#if record.Error}}Error Occurred{{else}}Success{{/if}}</h3>
+		<h3>{{#if record.Error}}Error publishing {{else}}Successfully published{{/if}} {{record.MessageType}}</h3>
 	</div>
 	<div class="modal-body" id="form-content">
 		<div id="publication-record" class="alert {{class}}">
-			<div class="row">
-				<div class="span3">
-					<strong>Completed</strong>
-					<br />
-					{{record.Completed}}
-				</div>
-				<div class="span3">
-					<strong>Dispatched</strong>
-					<br />
-					{{record.Dispatched}}
-				</div>
-				<div class="span3">
-					<strong>Identifier</strong>
-					<br />
-					{{record.Identifier}}
-				</div>
-				<div class="span3">
-					<strong>Created</strong>
-					<br />
-					{{record.Created}}
-				</div>
-			</div>
-			<div class="row">
-				<div class="span8">
-					<strong>Message</strong>
-					<br />
-					<a class="message-location" href="{{record.MessageLocation}}" rel="tooltip" data-original-title="click to open the serialized message">{{record.MessageLocation}}</a>
-				</div>
-				<div class="span4">
-					<strong>Message Type</strong>
-					<br />
-					{{record.MessageType}}
-				</div>
-			</div>
+			<table class="table-condensed">
+				<tr>
+					<td><strong>Completed</strong></td>
+					<td>{{#if record.Completed}}True{{else}}False{{/if}}</td>
+				</tr>
 
-			{{#if record.Error}}
-			<div class="row">&nbsp;</div>
-			<div class="row">
-				<div class="span3">
-					<strong>Error Message</strong>
-					<br />
-					{{record.ErrorMessage}}
-				</div>
-			</div>
-			<div class="row">
-				<div class="span6">
-					<strong>CallStack</strong>
-					<br />
-					{{convert-breaks record.CallStack}}
-				</div>
-			</div>
-			{{/if}}
+				<tr>
+					<td><strong>Dispatched</strong></td>
+					<td>{{#if record.Dispatched}}True{{else}}False{{/if}}</td>
+				</tr>
+
+				<tr>
+					<td><strong>Created</strong></td>
+					<td>{{record.Created}}</td>
+				</tr>
+
+				<tr>
+					<td><strong>Command</strong></td>
+					<td><a class="message-location" href="{{record.MessageLocation}}" rel="tooltip" data-original-title="click to open the serialized message">{{record.MessageLocation}}</a></td>
+				</tr>
+
+				{{#if record.Error}}
+				<tr>
+					<td><strong>Error Message</strong></td>
+					<td>{{record.ErrorMessage}}</td>
+				</tr>
+				{{/if}}
+
+				{{#if record.CallStack}}
+				<tr>
+					<td><strong>Call Stack</strong></td>
+					<td>{{convert-breaks record.CallStack}}</td>
+				</tr>
+				{{/if}}
+			</table>
 		</div>
 	</div>
 	<div class="modal-footer">
