corrected reference to authenticated user name

--- a/apps/Forum/ForumAdminComposite/Views/Dashboard/Index.cshtml
+++ b/apps/Forum/ForumAdminComposite/Views/Dashboard/Index.cshtml
@@ -4,7 +4,7 @@
 
 <article>
 	<header>
-		<h2 style="">Hello, @ViewBag.FirstName</h2>
+		<h2 style="">Hello, @AdminInfo.AuthenticatedUserFirstName</h2>
 	</header>
 </article>
 
