added "new store" screen stub

--- a/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
+++ b/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
@@ -4,6 +4,7 @@
 		<li id="nav-exampleCompanySlugFinancials"><a href="#company/exampleCompanySlug/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
 		<li id="nav-exampleCompanySlugAllTransactions"><a href="#company/exampleCompanySlug/allTransactions"><i class="icon-eye-open"></i>&nbsp;All Transactions</a></li>
 		<li id="nav-exampleCompanySlugEmployees"><a href="#company/exampleCompanySlug/employees"><i class="icon-user"></i>&nbsp;Employees</a></li>
+		<li id="nav-exampleCompanySlugNewStore"><a href="#company/exampleCompanySlug/newStore"><i class="icon-plus-sign"></i>&nbsp;New Store</a></li>
 		<li class="nav-header">{Store Name}</li>
 		<li id="nav-exampleStoreSlug1Financials"><a href="#store/exampleStoreSlug1/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
 		<li id="nav-exampleStoreSlug1Orders"><a href="#store/exampleStoreSlug1/orders"><i class="icon-inbox"></i>&nbsp;Orders</a></li>
