--- a/apps/Forum/ForumAdminComposite/Areas/Forum/Views/Forum/Create.cshtml
+++ b/apps/Forum/ForumAdminComposite/Areas/Forum/Views/Forum/Create.cshtml
@@ -64,7 +64,7 @@
 </article>
 
 <section id="forum-form-section">
-	@using (Html.BeginFormForInputModel(Model, true, Url.Action("Index", "Dashboard")))
+	@using (Html.BeginFormForInputModel(Model, true, "/Dashboard/Index"))
 	{
 		@Html.HiddenFor(m => m.OrganizationId)
 		@Html.HiddenFor(m => m.CreatedBy)
