update forum with latest packages

--- a/apps/Forum/ForumAdminComposite/Areas/Forum/Views/Theme/List.cshtml
+++ b/apps/Forum/ForumAdminComposite/Areas/Forum/Views/Theme/List.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Globalization
-@using Euclid.Composites.Mvc.Extensions
+@using Euclid.Composites.Mvc
 @model AdminComposite.Areas.Forum.InputModels.ForumThemeInputModel
 @{
 	ViewBag.Title = "Manage Forum Themes";
