--- a/apps/Forum/ForumAdminComposite/Views/Authentication/Create.cshtml
+++ b/apps/Forum/ForumAdminComposite/Views/Authentication/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using AdminComposite.Areas.Forum.InputModels
-@using Euclid.Composites.Mvc.Extensions
+@using Euclid.Composites.Mvc
 @model AdminComposite.Areas.Forum.InputModels.CreateOrganizationAndRegisterUserInputModel
 		   
 @{
