--- a/apps/Forum/ForumPublicComposite/Views/Post/Detail.cshtml
+++ b/apps/Forum/ForumPublicComposite/Views/Post/Detail.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Euclid.Common.Extensions
-@using Euclid.Composites.Mvc.Extensions
+@using Euclid.Composites.Mvc
 @using ForumComposite.Models
 @model ForumComposite.ViewModels.Post.PostDetailViewModel
 @{
