--- a/apps/Forum/ForumPublicComposite/Views/Post/NewComment.cshtml
+++ b/apps/Forum/ForumPublicComposite/Views/Post/NewComment.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CommentOnPostInputModel
 
-@using Euclid.Composites.Mvc.Extensions
+@using Euclid.Composites.Mvc
 @using ForumComposite.Models
 
 @using (Html.BeginFormForInputModel(Model))
