--- a/apps/Forum/ForumAdminComposite/Areas/Forum/Views/Avatar/_NewAvatar.cshtml
+++ b/apps/Forum/ForumAdminComposite/Areas/Forum/Views/Avatar/_NewAvatar.cshtml
@@ -1,4 +1,4 @@
-﻿@using Euclid.Composites.Mvc.Extensions
+﻿@using Euclid.Composites.Mvc
 @model AdminComposite.Areas.Forum.InputModels.CreateForumAvatarInputModel
 
 <section>
