--- a/apps/Forum/ForumAdminComposite/Views/Organization/Details.cshtml
+++ b/apps/Forum/ForumAdminComposite/Views/Organization/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@using Euclid.Composites.Mvc.Extensions
+﻿@using Euclid.Composites.Mvc
 @model AdminComposite.InputModels.UpdateOrganizationInputModel
 
 <script type="text/javascript">
