--- a/apps/Forum/ForumAdminComposite/Views/Organization/_UpdateOrganizationUser.cshtml
+++ b/apps/Forum/ForumAdminComposite/Views/Organization/_UpdateOrganizationUser.cshtml
@@ -1,5 +1,5 @@
 ﻿@using AdminComposite.Models
-@using Euclid.Composites.Mvc.Extensions
+@using Euclid.Composites.Mvc
 @model AdminComposite.InputModels.UpdateOrganizationUserInputModel
 
 @using (Html.BeginFormForInputModel(Model, true, Url.Action("Users", "Organization", new {organizationId = Model.OrganizationId})))
