--- a/apps/Forum/ForumPublicComposite/Views/Shared/Layout/SideBar/NewPost.cshtml
+++ b/apps/Forum/ForumPublicComposite/Views/Shared/Layout/SideBar/NewPost.cshtml
@@ -1,4 +1,4 @@
-﻿@using Euclid.Composites.Mvc.Extensions
+﻿@using Euclid.Composites.Mvc
 @model ForumComposite.Models.PublishPostInputModel
 
 @if (Request.IsAuthenticated)
