--- a/apps/Forum/ForumPublicComposite/Views/Shared/PostTile.cshtml
+++ b/apps/Forum/ForumPublicComposite/Views/Shared/PostTile.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Euclid.Common.Extensions
-@using Euclid.Composites.Mvc.Extensions
+@using Euclid.Composites.Mvc
 @using ForumComposite.Models
 @{
 	var header = "h2";
