--- a/src/sdk/CompositeInspector/Views/view-composite.cshtml
+++ b/src/sdk/CompositeInspector/Views/view-composite.cshtml
@@ -24,8 +24,22 @@
 	}
 </script>
 
+<div class="navbar">
+	<div class="navbar-inner">
+		<div class="container">
+			<a class="brand" href="#">Composite Inspector</a>
+			<div class="nav-collapse">
+				<ul class="nav">
+					<li class="active"><a href="#">Composite Details</a></li>
+					<li><a href="/composite/command-registry">Command Registry</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="row">
-	<div class="span16" id="composite"></div>
+	<div class="span12" id="composite"></div>
 </div>
 
 <div class="row">
