--- a/src/sdk/CompositeInspector/Views/Templates/read-models.html
+++ b/src/sdk/CompositeInspector/Views/Templates/read-models.html
@@ -1,9 +1,5 @@
-﻿@if (false) { 
-	// enable intellisense for EUCLID.js
-	<script type="text/javascript" src="../../Assets/Scripts/euclid-0.9.js"></script>
-}
-
-<script type="text/javascript">
+﻿<script type="text/javascript">
+	/// <reference path="/Assets/Scripts/euclid-0.9.js" />
 	var modal = $("<div id='modal'></div>");
 	$(document).ready(function () {
 		$(".read-model").click(function () {
