--- a/src/sdk/CompositeInspector/Views/Templates/modal/query.html
+++ b/src/sdk/CompositeInspector/Views/Templates/modal/query.html
@@ -1,7 +1,5 @@
-﻿@if (false) { 
-	<script type="text/javascript" src="../../../Assets/Scripts/euclid-0.9.js"></script>
-}
-<script type="text/javascript">
+﻿<script type="text/javascript">
+	/// <reference path="/Assets/Scripts/euclid-0.9.js" />
 	$(document).ready(function () {
 		$(document).on("click", ".method", function () {
 			var selectedQuery = $(this).attr("data-query-name");
