--- a/src/sdk/CompositeInspector/Views/Templates/input-models.html
+++ b/src/sdk/CompositeInspector/Views/Templates/input-models.html
@@ -1,52 +1,47 @@
-﻿<script type="text/javascript">
+﻿<div id="input-model-container">
+	<h5>Input Models</h5>
+	<ul>
+		{{#InputModels}}
+		<li id="input-model-{{Name}}">
+			{{Name}} 
+			(<a href="#" class="input-model-properties" data-input-model-name="{{Name}}">properties</a>
+			|
+			<a href="#" class="command" disabled="disabled" data-command-name="{{CommandName}}">submit</a>)
+		</li>
+		{{/InputModels}}
+	</ul>
+</div>
+
+<script type="text/javascript">
 	/// <reference path="/Assets/Scripts/euclid-0.9.js" />
+	var output = "#part-output";
+	
+	if (typeof commandScript === "undefined") {
+		$.getScript("/composite/js/composite-inspector-commands.js", function (data, textStatus, jqxhr) { $(".command").removeAttr("disabled"); });
+	} else {
+		$(".command").removeAttr("disabled");
+	}
 
-	$(document).ready(function () {
-		if (typeof commandScript === "undefined") {
-			$.getScript("/composite/js/composite-inspector-commands.js", function (data, textStatus, jqxhr) { $(".command").removeAttr("disabled"); });
-		} else {
-			$(".command").removeAttr("disabled");
-		}
+	$(document).on("click", ".input-model-properties", function () {
+		var inputModelName = $(this).attr("data-input-model-name");
+		var target = $(this);
 
-		$(".input-model-properties").click(function () {
-			var inputModelName = $(this).attr("data-input-model-name");
-			var target = $(this);
+		WorkWithDataFromUrl("/composite/api/inputModel/" + inputModelName,
+			function (inputModel) {
+				Using(inputModel)
+					.Render("/composite/ui/template/modal/input-model")
+					.Manipulate(function (template) {
+						$(output).html("");
+						$(output).append($(template));
+					});
+			}
+		);
 
-			WorkWithDataFromUrl("/composite/api/inputModel/" + inputModelName,
-				function (inputModel) {
-					Using(inputModel)
-						.Render("/composite/ui/template/modal/input-model")
-						.Manipulate(function (template) {
-							$(modal).html("");
-							$(modal).append($(template));
-							$(modal).modal("show");
-						});
-				}
-			);
+		return false;
+	});
 
-			return false;
-		});
-
-		$(".input-model-form").click(function () {
-			EUCLID.displayError({ name: "Not Implemented Exception", message: "Method not implemented" });
-			return false;
-		});
-
-		$("#dismiss-modal").click(function () {
-			$(modal).hide();
-			$(modal).remove();
-		});
+	$(document).on("click", ".input-model-form", function () {
+		EUCLID.displayError({ name: "Not Implemented Exception", message: "Method not implemented" });
+		return false;
 	});
 </script>
-
-<h5>Input Models</h5>
-<ul>
-{{#InputModels}}
-	<li id="input-model-{{Name}}">
-		{{Name}} 
-		(<a href="#" class="input-model-properties" data-input-model-name="{{Name}}">properties</a>
-		|
-		<a href="#" class="command" disabled="disabled" data-command-name="{{CommandName}}">submit</a>)
-	</li>
-{{/InputModels}}
-</ul>
