removed script tags from handlebars templates and reformatted them

--- a/apps/Storefront/StorefrontAdminComposite/Content/app/templates/company/AddEmployee.html
+++ b/apps/Storefront/StorefrontAdminComposite/Content/app/templates/company/AddEmployee.html
@@ -1,6 +1,2 @@
-﻿<script id="template-companyAddEmployee" type="text/x-handlebars-template">
-	<h3>{{companyName}} Add Employee</h3>
-	<hr/>
-	
-	
-</script>
+﻿<h3>{{companyName}} Add Employee</h3>
+<hr />
