--- a/apps/Storefront/StorefrontAdminComposite/Content/app/templates/company/Financials.html
+++ b/apps/Storefront/StorefrontAdminComposite/Content/app/templates/company/Financials.html
@@ -1,5 +1,3 @@
-﻿<script id="template-companyFinancials" type="text/x-handlebars-template">
-	<h3>{{title}}</h3>
-	<hr/>
-	<p>{{{body}}}</p>
-</script>
+﻿<h3>{{title}}</h3>
+<hr />
+<p>{{{body}}}</p>
