--- a/apps/Storefront/StorefrontAdminComposite/Content/app/templates/store/CustomerContact.html
+++ b/apps/Storefront/StorefrontAdminComposite/Content/app/templates/store/CustomerContact.html
@@ -1,6 +1,2 @@
-﻿<script id="template-storeAddOrder" type="text/x-handlebars-template">
-	<h3>{{storeName}} Customer Contact</h3>
-	<hr/>
-	
-	
-</script>
+﻿<h3>{{storeName}} Customer Contact</h3>
+<hr />
