--- a/apps/Storefront/StorefrontAdminComposite/Content/app/templates/store/Financials.html
+++ b/apps/Storefront/StorefrontAdminComposite/Content/app/templates/store/Financials.html
@@ -1,5 +1,3 @@
-﻿<script id="template-Financials" type="text/x-handlebars-template">
-	<h3>{{storeName}} Financials</h3>
-	<hr/>
-	<p>{{{body}}}</p>
-</script>
+﻿<h3>{{storeName}} Financials</h3>
+<hr />
+<p>{{{body}}}</p>
