--- a/apps/Storefront/StorefrontAdminComposite/Content/app/templates/company/EmployeeDetails.html
+++ b/apps/Storefront/StorefrontAdminComposite/Content/app/templates/company/EmployeeDetails.html
@@ -1,6 +1,2 @@
-﻿<script id="template-companyAddEmployee" type="text/x-handlebars-template">
-	<h3>{{companyName}} Employee Details</h3>
-	<hr/>
-	
-	
-</script>
+﻿<h3>{{companyName}} Employee Details</h3>
+<hr />
