--- a/apps/Storefront/StorefrontAdminComposite/Content/app/templates/store/AddDiscountCode.html
+++ b/apps/Storefront/StorefrontAdminComposite/Content/app/templates/store/AddDiscountCode.html
@@ -1,6 +1,2 @@
-﻿<script id="template-storeAddOrder" type="text/x-handlebars-template">
-	<h3>{{storeName}} Add Discount Code</h3>
-	<hr/>
-	
-	
-</script>
+﻿<h3>{{storeName}} Add Discount Code</h3>
+<hr />
