--- a/apps/Storefront/StorefrontAdminComposite/Content/app/templates/store/InviteCustomer.html
+++ b/apps/Storefront/StorefrontAdminComposite/Content/app/templates/store/InviteCustomer.html
@@ -1,6 +1,2 @@
-﻿<script id="template-storeInviteCustomer" type="text/x-handlebars-template">
-	<h3>{{storeName}} Invite Customer</h3>
-	<hr/>
-	
-	
-</script>
+﻿<h3>{{storeName}} Invite Customer</h3>
+<hr />
