--- a/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
+++ b/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
@@ -21,6 +21,6 @@
 		<li id="nav-exampleStoreSlug2DiscountCodes"><a href="#store/exampleStoreSlug2/discountCodes"><i class="icon-qrcode"></i>&nbsp;Discount Codes</a></li>
 		<li class="nav-header">System Administration</li>
 		<li id="nav-SysAdminCompanies"><a href="#sysadmin/companies"><i class="icon-plus-sign"></i>&nbsp;All Companies</a></li>
-		<li id="nav-SysAdminAdministrators"><a href="#sysadmin/administrators"><i class="icon-user"></i>&nbsp;System Administrators</a></li>
+		<li id="nav-SysAdminAdministrators"><a href="#sysadmin/administrators"><i class="icon-user"></i>&nbsp;Administrators</a></li>
 	</ul>
 </div>
