--- a/apps/Storefront/StorefrontAdminComposite/Content/app/templates/sysadmin/AddAdministrator.html
+++ b/apps/Storefront/StorefrontAdminComposite/Content/app/templates/sysadmin/AddAdministrator.html
@@ -2,14 +2,24 @@
 	<hr/>
 	<form class="form-horizontal">
 		<div class="control-group">
-			<label class="control-label" for="input01">Text input</label>
+			<label class="control-label" for="input01">First Name</label>
 			<div class="controls">
-				<input type="text" class="input-xlarge" id="input01">
-				<p class="help-block">Supporting help text</p>
+				<input type="text" class="input-xlarge" placeholder="First Name">
+			</div>
+		</div>
+		<div class="control-group">
+			<label class="control-label" for="input01">Last Name</label>
+			<div class="controls">
+				<input type="text" class="input-xlarge" placeholder="Last Name">
+			</div>
+		</div>
+		<div class="control-group">
+			<label class="control-label" for="input01">Email</label>
+			<div class="controls">
+				<input type="text" class="input-xlarge" placeholder="Email">
 			</div>
 		</div>
 		<div class="form-actions">
-			<button type="submit" class="btn btn-primary">Save changes</button>
-			<button class="btn">Cancel</button>
+			<button type="submit" class="btn btn-primary">Add Administrator</button>
 		</div>
 	</form>
