working on a dropdown nav typeahead feature for the storefront admin

--- a/apps/Storefront/StorefrontAdminComposite/Content/app/templates/sysadmin/AddAdministrator.html
+++ b/apps/Storefront/StorefrontAdminComposite/Content/app/templates/sysadmin/AddAdministrator.html
@@ -20,6 +20,6 @@
 			</div>
 		</div>
 		<div class="form-actions">
-			<button type="submit" class="btn btn-primary">Add Administrator</button>
+			<a href="#sysadmin/administrators" class="btn btn-primary">Add Administrator</a>
 		</div>
 	</form>
