--- a/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
+++ b/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
@@ -1,6 +1,24 @@
 ﻿<div class="well" style="padding: 8px 0;">
 	<ul class="nav nav-list">
-		<li class="nav-header">{Company Name}</li>
+		<li class="nav-header">System Administration</li>
+		<li id="nav-SysAdminCompanies"><a href="#sysadmin/companies"><i class="icon-plus-sign"></i>&nbsp;All Companies</a></li>
+		<li id="nav-SysAdminAdministrators"><a href="#sysadmin/administrators"><i class="icon-user"></i>&nbsp;Administrators</a></li>
+		<li class="nav-header">
+
+			<div class="btn-group">
+				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">{Company Name} <b class="caret"></b></a>
+
+				<div class="dropdown-menu">
+
+					<div style="margin: 10px;">
+						<input type="text" class="span2" style="margin: 0 auto;" data-provide="typeahead" data-items="4" data-source='["Alabama","Alaska","Arizona","Arkansas","California","Colorado","Connecticut","Delaware","Florida","Georgia","Hawaii","Idaho","Illinois","Indiana","Iowa","Kansas","Kentucky","Louisiana","Maine","Maryland","Massachusetts","Michigan","Minnesota","Mississippi","Missouri","Montana","Nebraska","Nevada","New Hampshire","New Jersey","New Mexico","New York","North Dakota","North Carolina","Ohio","Oklahoma","Oregon","Pennsylvania","Rhode Island","South Carolina","South Dakota","Tennessee","Texas","Utah","Vermont","Virginia","Washington","West Virginia","Wisconsin","Wyoming"]'>
+					</div>
+
+				</div>
+
+			</div>
+
+		</li>
 		<li id="nav-exampleCompanySlugFinancials"><a href="#company/exampleCompanySlug/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
 		<li id="nav-exampleCompanySlugAllTransactions"><a href="#company/exampleCompanySlug/allTransactions"><i class="icon-eye-open"></i>&nbsp;All Transactions</a></li>
 		<li id="nav-exampleCompanySlugEmployees"><a href="#company/exampleCompanySlug/employees"><i class="icon-user"></i>&nbsp;Employees</a></li>
@@ -19,8 +37,6 @@
 		<li id="nav-exampleStoreSlug2ProductCatalog"><a href="#store/exampleStoreSlug2/productCatalog"><i class="icon-th-list"></i>&nbsp;Product Catalog</a></li>
 		<li id="nav-exampleStoreSlug2Promotions"><a href="#store/exampleStoreSlug2/promotions"><i class="icon-exclamation-sign"></i>&nbsp;Promotions</a></li>
 		<li id="nav-exampleStoreSlug2DiscountCodes"><a href="#store/exampleStoreSlug2/discountCodes"><i class="icon-qrcode"></i>&nbsp;Discount Codes</a></li>
-		<li class="nav-header">System Administration</li>
-		<li id="nav-SysAdminCompanies"><a href="#sysadmin/companies"><i class="icon-plus-sign"></i>&nbsp;All Companies</a></li>
-		<li id="nav-SysAdminAdministrators"><a href="#sysadmin/administrators"><i class="icon-user"></i>&nbsp;Administrators</a></li>
 	</ul>
 </div>
+
