minor improvement to admin nav

--- a/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
+++ b/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
@@ -25,18 +25,7 @@
 		<li id="nav-SysAdminSettings"><a href="#sysadmin/settings"><i class="icon-cog"></i>&nbsp;Settings</a></li>
 		<li id="nav-SysAdminAdministrators"><a href="#sysadmin/administrators"><i class="icon-user"></i>&nbsp;Administrators</a></li>
 		<li id="nav-SysAdminAddCompany"><a href="#sysadmin/companies/add"><i class="icon-plus-sign"></i>&nbsp;Add Company</a></li>
-		<li class="nav-header">Companies</li>
-		<li style="margin-top: 10px; margin-bottom: 10px;">
-			<form style="margin: 0px;">
-
-			<div class="input-prepend">
-				<span class="add-on"><i class="icon-chevron-right"></i></span>
-				<input placeholder="Type company name" class="input-medium" id="companyNames" />
-				<p class="pull-right"><span id="deselectCompany" style="cursor: pointer;" class="label">Change</span></p>
-			</div>
-
-			</form>
-		</li>
+		<li class="nav-header">{Company Name}</li>
 		<li id="nav-exampleCompanySlugFinancials"><a href="#company/exampleCompanySlug/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
 		<li id="nav-exampleCompanySlugAllTransactions"><a href="#company/exampleCompanySlug/allTransactions"><i class="icon-eye-open"></i>&nbsp;All Transactions</a></li>
 		<li id="nav-exampleCompanySlugEmployees"><a href="#company/exampleCompanySlug/employees"><i class="icon-user"></i>&nbsp;Employees</a></li>
@@ -55,6 +44,20 @@
 		<li id="nav-exampleStoreSlug2ProductCatalog"><a href="#store/exampleStoreSlug2/productCatalog"><i class="icon-th-list"></i>&nbsp;Product Catalog</a></li>
 		<li id="nav-exampleStoreSlug2Promotions"><a href="#store/exampleStoreSlug2/promotions"><i class="icon-exclamation-sign"></i>&nbsp;Promotions</a></li>
 		<li id="nav-exampleStoreSlug2DiscountCodes"><a href="#store/exampleStoreSlug2/discountCodes"><i class="icon-qrcode"></i>&nbsp;Discount Codes</a></li>
+	
+		<li class="nav-header">Current Company</li>
+		<li style="margin-top: 10px; margin-bottom: 10px;">
+			<form style="margin: 0px;">
+
+			<div class="input-prepend">
+				<span class="add-on"><i class="icon-chevron-right"></i></span>
+				<input placeholder="Type company name" class="input-medium" id="companyNames" />
+				<p class="pull-right"><span id="deselectCompany" style="cursor: pointer;" class="label">Show All</span></p>
+			</div>
+
+			</form>
+		</li>
+	
 	</ul>
 </div>
 
