--- a/src/sdk/CompositeInspector/Views/Templates/query.html
+++ b/src/sdk/CompositeInspector/Views/Templates/query.html
@@ -73,12 +73,12 @@
 
 		EUCLID.withFormResults($("#query-form"), function (results) {
 			if (results == null) {
-				_//displayResults("<div class='alert alert-box'><strong>Nada</strong> The query returned no results</div>");
+				//displayResults("<div class='alert alert-box'><strong>Nada</strong> The query returned no results</div>");
+				$("#results-error").html("");
+				$("#results-error").append("<div class='alert alert-box'><strong>Nada</strong> The query returned no results</div>");
 			} else {
-				var data = getQueryResultsObject(results, selectedQuery, selectedMethod);
-				setupPaging(data);
-				Using(data).Fill("#pager").With("/composite/ui/template/pager");
-				Using(data).Fill("#table-container").With("/composite/ui/template/query-results-table");
+				var tableData = getQueryResultsObject(results, selectedQuery, selectedMethod);
+				Using(tableData).Fill("#table-container").With("/composite/ui/template/query-results-table");
 			}
 
 			$("#view-results").click();
@@ -90,7 +90,7 @@
 	function getQueryResultsObject(results, queryName, methodName) {
 		if ((results instanceof Array && results.length == 0) || !results) {
 			return null;
-		} else if (!results instanceof Array) {
+		} else if (!(results instanceof Array)) {
 			var tmp = new Array();
 			tmp.push(results);
 			results = tmp;
@@ -108,24 +108,5 @@
 		}
 
 		return { Headers: headers, Results: results, NumberResults: numberResults, FullQueryName: queryName + "." + methodName };
-	}
-
-	function setupPaging(results) {
-		var prevPage = (results.CurrentPage > 1) ? results.CurrentPage - 1 : 1;
-		$("#prev-page").attr("data-page-number", prevPage);
-		$("#prev-page").attr("title", "Page " + prevPage);
-
-		var nextPage = (results.CurrentPage < results.TotalPages) ? results.CurrentPage + 1 : results.TotalPages;
-		$("#next-page").attr("data-page-number", nextPage);
-		$("#next-page").attr("title", "Page " + nextPage);
-
-		$("#page-number").val(results.CurrentPage);
-		$("#page-number").attr("data-current-page", results.CurrentPage);
-		$("#page-number").attr("data-max-page", results.TotalPages - 1);
-
-		$("#display-total").text("of " + results.TotalPages);
-
-		$("#last-page").attr("data-page-number", results.TotalPages);
-		$("#last-page").attr("title", "Page " + results.TotalPages);
 	}
 </script>
