--- a/src/sdk/CompositeInspector/Views/inspector.html
+++ b/src/sdk/CompositeInspector/Views/inspector.html
@@ -11,6 +11,7 @@
 		<script type="text/javascript" src="/composite/js/handlebars/handlebars-1.0.0.beta.6.js"> </script>
 		<script type="text/javascript" src="/composite/js/handlebars/euclid-handlebars-extensions.js"></script>
 		<script type="text/javascript" src="/composite/js/euclid-0.9.js" ></script>
+		<script type="text/javascript" src="/composite/js/euclid-prototype-extensions.js"> </script>
 
 		<link rel="Stylesheet" type="text/css" href="/composite/css/composite-inspector.css" />
 		<link rel="Stylesheet" type="text/css" href="/composite/css/smoothness/jquery-ui-1.8.16.custom.css" />
@@ -34,6 +35,14 @@
 				
 				<div class="row">
 					<div class="span12" id="composite"></div>
+				</div>
+				
+				<div class="row">
+					<div class="span12" id="command-registry-table"></div>
+				</div>
+				
+				<div class="row">
+					<div class="span12" id="pager"></div>
 				</div>
 			</div>
 		</div>
