--- a/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
+++ b/apps/Storefront/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
@@ -11,10 +11,13 @@
 			minLength: 0
 		});
 
-		$("#deselectCompany").click(function () {
+		$("#showAllCompanies").click(function () {
 			$("#companyNames").autocomplete("search", "");
 		});
 
+		$("#clearCompany").click(function () {
+			$("#companyForm")[0].reset();
+		});
 
 	});
 </script>
@@ -47,12 +50,12 @@
 	
 		<li class="nav-header">Current Company</li>
 		<li style="margin-top: 10px; margin-bottom: 10px;">
-			<form style="margin: 0px;">
+			<form id="companyForm" style="margin: 0px;">
 
 			<div class="input-prepend">
-				<span class="add-on"><i class="icon-chevron-right"></i></span>
+				<span id="showAllCompanies" style="cursor: pointer;" class="add-on"><i class="icon-chevron-right"></i></span>
 				<input placeholder="Type company name" class="input-medium" id="companyNames" />
-				<p class="pull-right"><span id="deselectCompany" style="cursor: pointer;" class="label">Show All</span></p>
+				<p class="pull-right"><span id="clearCompany" style="cursor: pointer;" class="label">Clear</span></p>
 			</div>
 
 			</form>
